Add new product types to index.html
Added new product types to the product section.

Signed-off-by: ahmetorucgemi00-hub <ahmetorucgemi00@gmail.com>

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <div class="card">🌾 Ekmeklik Un</div>
         <div class="card">🌾 Pastalık Un</div>
         <div class="card">🌾 Böreklik Un</div>
+        <div class="card">🌾 Arpa Un</div>
+        <div class="card">🌾 Arpa Ezmesi</div>
     </div>
     <a href="#iletisim" class="btn">Sipariş Ver</a>
 </section>
@@ -53,3 +55,4 @@
 
 </body>
 </html>
+
