--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="card">🌾 Arpa Un</div>
         <div class="card">🌾 Arpa Ezmesi</div>
     </div>
-    <a href="0534 668 2001" class="btn">Sipariş Ver</a>
+    <a href="#0534 668 2001" class="btn">Sipariş Ver</a>
 </section>
 
 <section id="iletisim">
@@ -56,6 +56,7 @@
 
 </body>
 </html>
+
 
 
 
