--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
         <div class="card">🌾 Böreklik Un</div>
         <div class="card">🌾 Arpa Un</div>
         <div class="card">🌾 Arpa Ezmesi</div>
-    </div>
+        
+    </div>https://wa.me/905434169445?text=Merhaba%20sipariş%20vermek%20istiyorum</div>
+
     <a href="#0534 668 2001" class="btn">Sipariş Ver</a>
 </section>
-
+    
 <section id="iletisim">
     <h2>İletişim</h2>
     <p>📍 Adres: Yeşil Gölcük Yolu 1. Km, Tırhan Köyü / Niğde</p>
@@ -56,6 +58,7 @@
 
 </body>
 </html>
+
 
 
 
