Enhance index.html with new features and styles
Updated the HTML structure and added a WhatsApp order button with an SVG icon.

Signed-off-by: ahmetorucgemi00-hub <ahmetorucgemi00@gmail.com>

--- a/index.html
+++ b/index.html
@@ -40,12 +40,30 @@
         <div class="card">🌾 Arpa Un</div>
         <div class="card">🌾 Arpa Ezmesi</div>
    </div>
+
+
     
-    <a href="https://wa.me/905434169445?text=Merhaba%20sipariş%20vermek%20istiyorum" 
+<!-- WhatsApp Sipariş Butonu -->
+<a href="https://wa.me/905434169445?text=Merhaba%20sipariş%20vermek%20istiyorum" 
    target="_blank" 
-   style="background:#25D366;color:white;padding:12px 20px;border-radius:6px;text-decoration:none;font-weight:bold;display:inline-block;">
-   WhatsApp ile Sipariş Ver
-</a>
+   style="
+   display:inline-flex;
+   align-items:center;
+   gap:8px;
+   background-color:#25D366;
+   color:white;
+   padding:12px 20px;
+   border-radius:50px;
+   text-decoration:none;
+   font-weight:600;
+   font-family:Arial, sans-serif;
+   box-shadow:0 4px 10px rgba(0,0,0,0.15);
+   transition:0.3s;">
+   
+   <!-- WhatsApp SVG İkon -->
+   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white" viewBox="0 0 24 24">
+       <path d="M12.04 2C6.52 2 2 6.48 2 12c0 1.97.58 3.82 1.57 5.39L2 22l4.73-1.54A9.94 9.94 0 0 0 12.04 22C17.56 22 22 17.52 22 12S17.56 2 12.04 2zm5.54 14.25c-.23.65-1.36 1.24-1.88 1.32-.48.07-1.08.1-1.75-.12-.41-.13-.94-.31-1.63-.6-2.87-1.23-4.74-4.11-4.88-4.3-.14-.19-1.16-1
+
 
     
 <section id="iletisim">
@@ -61,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
