--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-   <div style="...">
-        <h2>Eyüpgulları Furkan'un Fabrikası</h2>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eyüp Oğulları Furkan Un Fabrikası</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -12,6 +14,8 @@
         <h1>Eyüp Oğulları Furkan Un Fabrikası</h1>
         <p>Kaliteli Unun Güvencesi</p>
     </div>
+
+
 </header>
 
 
@@ -83,6 +87,7 @@
 
 </body>
 </html>
+
 
 
 
